# docai

./: .gitignore  LICENSE  Pipfile  README.md  codegen.yaml  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: tests.yml
docai/: __init__.py
docai/annotations/: __init__.py  annotations.py  annotations_client.py  bbx_utils.py  document_annotation_with_image.py  image_utils.py  layoutlm_utils.py  ner_utils.py
docai/common/: base_client.py  file_utils.py  http_utils.py  types.py
docai/models/: __init__.py  model_client.py  model_utils.py
docai/models/tests/: test_model_client.py
docai/predictions/: __init__.py  predictions_client.py
docai/test/: test_extract_document.py  test_load_annotations.py
docai/training/: __init__.py  layoutlm_metrics.py
